--- a/dcase_baseline_env.yaml
+++ b/dcase_baseline_env.yaml
@@ -154,7 +154,7 @@ dependencies:
   - readline=8.2=h5eee18b_0
   - requests=2.28.1=py38h06a4308_0
   - scikit-learn=1.2.1=py38h6a678d5_0
-  - scipy=1.10.0=py38h14f4228_0
+  - scipy=1.10.0
   - setuptools=65.6.3=py38h06a4308_0
   - six=1.16.0=pyhd3eb1b0_1
   - soxr=0.1.3=h0b41bf4_3
